--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <div>
               
         </nav>
-<!-- 
+
         <section class="mx-32">
             <div class="hero min-h-screen">
                 <div class="hero-content flex-col">
@@ -68,7 +68,7 @@
         </section>
     </header>
 
-    <main>
+    <!-- <main>
         <section class="bg-[#F4F4F4]">
           <section  class="">
             <div class="flex  gap-9 justify-center px-32 pt-24">
