main section 1st commit

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </section>
     </header>
 
-    <!-- <main>
+    <main>
         <section class="bg-[#F4F4F4]">
           <section  class="">
             <div class="flex  gap-9 justify-center px-32 pt-24">
@@ -166,7 +166,7 @@
            </section>
         </section>
 
-        <section class="text-center justify-center items-center border px-32 py-24">
+        <!-- <section class="text-center justify-center items-center border px-32 py-24">
          
           <div class="max-w-6xl mx-auto">
           
