main section 3rd  commit

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
          </div>
         </section>
 
-        <!-- <section class="text-center justify-center items-center border py-24">
+        <section class="text-center justify-center items-center border py-24">
           <div class=" mx-auto max-w-5xl bg-[url('')]">
             
             <div>
@@ -242,7 +242,7 @@
         </section>
     </main>
 
-    <footer class="text-center border py-24 bg-[#1C1C1C]">
+    <!-- <footer class="text-center border py-24 bg-[#1C1C1C]">
       
       <h1 class="text-3xl font-extrabold text-[#E9E9E9]">Rinterio</h1>
       <p class="text-[#737373]  mt-4">The barn house captivates with its blend of rustic charm and modern sophistication,<br> featuring weathered wood, sleek metal accents.</p>
