--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         </section>
     </main>
 
-    <!-- <footer class="text-center border py-24 bg-[#1C1C1C]">
+    <footer class="text-center border py-24 bg-[#1C1C1C]">
       
       <h1 class="text-3xl font-extrabold text-[#E9E9E9]">Rinterio</h1>
       <p class="text-[#737373]  mt-4">The barn house captivates with its blend of rustic charm and modern sophistication,<br> featuring weathered wood, sleek metal accents.</p>
@@ -256,6 +256,6 @@
         </ul>
       </div>
       <button class="bg-[#ABEF5F] mt-12 w-56 h-14 px-5 py-3 rounded-full text-[#1C1C1C] space-x-2"><span class="text-xl font-extrabold">Book Consult </span><i class="fa-solid fa-arrow-right  bg-[#1C1C1C] text-[#FFFFFF] rounded-full w-8 h-8 p-2 -rotate-45"></i></button>
-    </footer> -->
+    </footer>
 </body>
 </html>
