--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="hero min-h-screen">
                 <div class="hero-content flex-col">
                   <img
-                    src="/assets/banner.png"
+                    src="./assets/banner.png"
                     class="max-w-lg max-h-80 " />
                   <div class=" text-center">
                     <h1 class="text-6xl font-bold">A barn house of this design has a <br> striking appearance</h1>
@@ -81,7 +81,7 @@
                <div class="card card-side bg-base-100 shadow-xl mt-6 pl-8">
                  <figure>
                    <img
-                    src="/assets/commercial.png"
+                    src="./assets/commercial.png"
                     class="max-w-64 max-h-16	" />
                  </figure>
                  <div class="card-body">
@@ -92,7 +92,7 @@
                <div class="card card-side bg-base-100 shadow-xl mt-6 pl-8">
                  <figure>
                    <img
-                   src="/assets/residential.png"
+                   src="./assets/residential.png"
                    class="max-w-64 max-h-16	" />
                  </figure>
                  <div class="card-body">
@@ -102,7 +102,7 @@
                </div>
          </div>
              <div>
-               <img src="/assets/Rectangle.png" class="max-w-xl max-h-full "/>
+               <img src="./assets/Rectangle.png" class="max-w-xl max-h-full "/>
              </div>
           </div>
            </section>
@@ -116,7 +116,7 @@
                <div class="card card-compact bg-[#E7C1D3] w-72 h-56	 shadow-xl text-left items-start p-6">
                    <figure>
                      <img
-                       src="/assets/concept.png"
+                       src="./assets/concept.png"
                        alt="Shoes" class="max-w-16 max-h-16 pl-4" />
                    </figure>
                    <div class="card-body">
@@ -128,7 +128,7 @@
                <div class="card card-compact bg-[#EFDA6E] w-72 h-56	 shadow-xl text-left items-start p-6">
                    <figure>
                      <img
-                       src="/assets/flow-chart.png"
+                       src="./assets/flow-chart.png"
                        alt="Shoes" class="max-w-16 max-h-16 pl-4" />
                    </figure>
                    <div class="card-body">
@@ -140,7 +140,7 @@
                <div class="card card-compact bg-[#A4DAC3] w-72 h-56	 shadow-xl text-left items-start p-6">
                    <figure>
                      <img
-                       src="/assets/vision.png"
+                       src="./assets/vision.png"
                        alt="Shoes" class="max-w-16 max-h-16 pl-4" />
                    </figure>
                    <div class="card-body">
@@ -152,7 +152,7 @@
                <div class="card card-compact bg-[#77AAEA] w-72 h-56	 shadow-xl text-left items-start p-6">
                    <figure>
                      <img
-                       src="/assets/budget-planning.png"
+                       src="./assets/budget-planning.png"
                        alt="Shoes" class="max-w-16 max-h-16 pl-4" />
                    </figure>
                    <div class="card-body">
@@ -178,7 +178,7 @@
           <div class="mt-8 grid grid-cols-8 gap-6 max-w-full">
              <div class="flex flex-row max-w-4xl max-h-56 space-x-6 border border-solid  border-[#E9E9E9] rounded-2xl p-6 col-span-5">
                 <div>
-                  <img src="/assets/img1.png" alt="" class="max-w-64 max-h-44	">
+                  <img src="./assets/img1.png" alt="" class="max-w-64 max-h-44	">
                 </div>
                 <div class="text-start">
                   <h3 class="text-[#494949] font-extrabold text-2xl">Commercial</h3>
@@ -187,14 +187,14 @@
                 </div>
              </div>
               <div class="border border-solid border-[#E9E9E9] rounded-2xl max-w-sm max-h-56 col-span-3">
-                <img src="/assets/img2.png" alt="" class="p-6" />
+                <img src="./assets/img2.png" alt="" class="p-6" />
               </div>
               <div class="border border-solid border-[#E9E9E9] rounded-2xl max-w-72 max-h-56 col-span-2">
-                <img src="/assets/img3.png" alt="" class="p-6" />
+                <img src="./assets/img3.png" alt="" class="p-6" />
               </div>
               <div class="flex flex-row max-w-xl max-h-56 space-x-6 border border-solid  border-[#E9E9E9] rounded-2xl p-6 col-span-4">
                 <div>
-                  <img src="/assets/img4.png" alt="" class="max-w-64 max-h-44	">
+                  <img src="./assets/img4.png" alt="" class="max-w-64 max-h-44	">
                 </div>
                 <div class="text-start">
                   <h3 class="text-[#494949] font-extrabold text-2xl">Commercial</h3>
@@ -203,7 +203,7 @@
                 </div>
              </div>
                 <div class="border border-solid border-[#E9E9E9] rounded-2xl max-w-72 max-h-56 col-span-2">
-                  <img src="/assets/img5.png" alt="" class="p-6" />
+                  <img src="./assets/img5.png" alt="" class="p-6" />
                 </div>
           </div>
          </div>
