--- a/index.html
+++ b/index.html
@@ -71,14 +71,17 @@
     <main>
         <section class="bg-[#F4F4F4]">
           <section  class="">
-            <div class="flex  gap-9 justify-center px-32 pt-24">
+            <div class="justify-start absolute">
+              <img src="./assets/Vector.png" alt="" class="ml-80 mt-16">
+            </div>
+            <div class="flex  gap-9 justify-center px-32 pt-28">
            <div>
              <button class="bg-[#FFFFFF] w-32 rounded-full space-x-2"><i class="fa-solid fa-arrow-right text-[#1C1C1C] "></i><span class="font-semibold">About Us</span></button>
-             <h2 class="text-5xl font-extrabold mt-6">We design thoughtful, <br> liveable spaces</h2>
-             <p class="text-[#494949]  mt-6">The barn house captivates with its blend of rustic charm and <br>
+             <h2 class="text-5xl font-extrabold mt-5">We design thoughtful, <br> liveable spaces</h2>
+             <p class="text-[#494949]  mt-5">The barn house captivates with its blend of rustic charm and <br>
                modern sophistication, featuring weathered wood, sleek metal accents.</p>
        
-               <div class="card card-side bg-base-100 shadow-xl mt-6 pl-8">
+               <div class="card card-side bg-base-100 shadow-xl mt-5 pl-8">
                  <figure>
                    <img
                     src="./assets/commercial.png"
@@ -89,7 +92,7 @@
                    <p class="text-[#737373] py-2">The barn house captivates with its blend <br> of rustic charm and modern.</p>
                  </div>
                </div>
-               <div class="card card-side bg-base-100 shadow-xl mt-6 pl-8">
+               <div class="card card-side bg-base-100 shadow-xl mt-5 pl-8">
                  <figure>
                    <img
                    src="./assets/residential.png"
@@ -102,7 +105,7 @@
                </div>
          </div>
              <div>
-               <img src="./assets/Rectangle.png" class="max-w-xl max-h-full "/>
+               <img src="./assets/Rectangle.png" class="max-w-xl max-h-max "/>
              </div>
           </div>
            </section>
